# mongodb-mcp-server

./: .env.example  .gitignore  Design.md  Pyproject.toml  README.md  pyproject.toml  pytest.ini  server.py
.roo/: mcp.json
tests/: __init__.py  conftest.py  test_connection.py
