[project]
name = "mongodb-mcp"
version = "0.1.0"
description = "MongoDB MCP Server using FastMCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pymongo",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mongodb-mcp = "server:mcp.run"